[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/scenes/MainMenu/model_1.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/8-Bit Wonder/8-Bit Wonder.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://assets/scenes/MainMenu/margin.png" type="Texture" id=4]
[ext_resource path="res://controls/InteractiveButton/InteractiveButton.tscn" type="PackedScene" id=5]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 1.4, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="DynamicFont" id=2]
size = 64
extra_spacing_bottom = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="MainMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuParticles" type="CPUParticles2D" parent="."]
position = Vector2( 512, 300 )
amount = 128
lifetime = 4.0
preprocess = 4.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
linear_accel = 30.0
scale_amount = 6.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="modelleft" type="TextureRect" parent="HBoxContainer"]
margin_right = 248.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 280.0
margin_right = 712.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="head" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 432.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
texture = ExtResource( 4 )
expand = true

[node name="title" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 432.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 2 )
text = "NULL"
align = 1
valign = 1

[node name="footer" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 432.0
margin_bottom = 148.0
rect_min_size = Vector2( 0, 32 )
texture = ExtResource( 4 )
expand = true
flip_v = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 432.0
margin_bottom = 568.0
rect_min_size = Vector2( 432, 0 )
size_flags_vertical = 3
custom_constants/separation = 32
alignment = 1

[node name="Start" parent="HBoxContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 64.0
margin_right = 432.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 3 )
text = "START"

[node name="Options" parent="HBoxContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 128.0
margin_right = 432.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 3 )
text = "OPTIONS"

[node name="HighScores" parent="HBoxContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 192.0
margin_right = 432.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 3 )
text = "HIGH SCORES"

[node name="GitHub" parent="HBoxContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 256.0
margin_right = 432.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 3 )
text = "GITHUB"

[node name="Exit" parent="HBoxContainer/VBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 320.0
margin_right = 432.0
margin_bottom = 352.0
custom_fonts/font = SubResource( 3 )
text = "EXIT"

[node name="modelright" type="TextureRect" parent="HBoxContainer"]
margin_left = 744.0
margin_right = 992.0
margin_bottom = 568.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 6
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/HighScores" to="." method="_on_HighScores_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/GitHub" to="." method="_on_GitHub_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
